--- a/themes/loveit/layouts/_default/baseof.html
+++ b/themes/loveit/layouts/_default/baseof.html
@@ -11,6 +11,7 @@
         {{- partial "head/meta.html" . -}}
         {{- partial "head/link.html" . -}}
         {{- partial "head/seo.html" . -}}
+        {{- partial "head/cookie.html" . -}}
     </head>
     <body data-header-desktop="{{ .Site.Params.header.desktopMode }}" data-header-mobile="{{ .Site.Params.header.mobileMode }}">
         {{- /* Check theme isDark before body rendering */ -}}
