--- a/themes/loveit/layouts/partials/footer.html
+++ b/themes/loveit/layouts/partials/footer.html
@@ -18,6 +18,10 @@
             {{- end -}}
 
             <div class="footer-line" itemscope itemtype="http://schema.org/CreativeWork">
+                <div>
+                    <span class="author" itemprop="copyrightHolder">&nbsp;<a href="/policies/cookie-policy" target="_blank">Cookie Policy</a></span>
+                    <span class="author" itemprop="copyrightHolder">&nbsp;<a href="/policies/privacy-policy" target="_blank">Privacy Policy</a></span>
+                </div>
                 {{- /* Copyright year */ -}}
                 {{- if ne .Site.Params.footer.copyright false -}}
                     <i class="far fa-copyright fa-fw" aria-hidden="true"></i>
@@ -30,10 +34,12 @@
                     {{- end -}}
                 {{- end -}}
 
+
                 {{- /* Author */ -}}
                 {{- if ne .Site.Params.footer.author false -}}
                     <span class="author" itemprop="copyrightHolder">&nbsp;<a href="{{ $.Site.Author.link | default .Site.Home.RelPermalink }}" target="_blank">{{ .Site.Author.name }}</a></span>
                 {{- end -}}
+
 
                 {{- /* License */ -}}
                 {{- with .Site.Params.footer.license -}}
@@ -45,6 +51,8 @@
                     <span class="icp-splitter">&nbsp;|&nbsp;</span><br class="icp-br"/>
                     <span class="icp">{{ . | safeHTML }}</span>
                 {{- end -}}
+
+
             </div>
         </div>
     </footer>
