setup gdpr policies

--- a/themes/loveit/layouts/partials/footer.html
+++ b/themes/loveit/layouts/partials/footer.html
@@ -19,8 +19,8 @@
 
             <div class="footer-line" itemscope itemtype="http://schema.org/CreativeWork">
                 <div>
-                    <span class="author" itemprop="copyrightHolder">&nbsp;<a href="/policies/cookie-policy" target="_blank">Cookie Policy</a></span>
-                    <span class="author" itemprop="copyrightHolder">&nbsp;<a href="/policies/privacy-policy" target="_blank">Privacy Policy</a></span>
+                    <span class="author" itemprop="copyrightHolder">&nbsp;<a href="https://www.iubenda.com/privacy-policy/20887513/cookie-policy" target="_blank">Cookie Policy</a></span>
+                    <span class="author" itemprop="copyrightHolder">&nbsp;<a href="https://www.iubenda.com/privacy-policy/20887513" target="_blank">Privacy Policy</a></span>
                 </div>
                 {{- /* Copyright year */ -}}
                 {{- if ne .Site.Params.footer.copyright false -}}
